[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/EnemyDevourerWorm.png" type="Texture" id=1]
[ext_resource path="res://EnemyDevourerWorm.gd" type="Script" id=2]
[ext_resource path="res://torus.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 40.0
height = 95.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 40.0
height = 95.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 40.0
height = 95.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 40.0
height = 95.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 40.0
height = 95.0

[sub_resource type="Animation" id=6]
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("torus1/torus/torus:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("torus2/torus/torus:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("torus3/torus/torus:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("torus4/torus/torus:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 0, 1, 2, 3 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("torus1/torus/toruscollision:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 0.6, 2 ), Vector2( 2, 2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("torus2/torus/toruscollision:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 2 ), Vector2( 2, 2 ), Vector2( 0.6, 2 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("torus3/torus/toruscollision:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 0.6, 2 ), Vector2( 2, 2 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("torus4/torus/toruscollision:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 2 ), Vector2( 2, 2 ), Vector2( 0.6, 2 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("WormSkeleton/chest/head:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WormSkeleton/chest:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WormSkeleton/torus1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WormSkeleton/torus2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("WormSkeleton/torus3:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("WormSkeleton/torus4:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "kill"
} ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("collisionhead:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=8]
length = 4.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("WormSkeleton/chest:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.2, 56.9872, 300, -0.25, 0, 0.25, 0, 0, -0.13, 54.9136, 0.13, -69.5024, -300, -0.25, 0, 0.25, 0, 0, -0.15, -63.2816, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2, 3, 4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("WormSkeleton/chest:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -50, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 50, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2, 3, 4 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("WormSkeleton/chest/head:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 50.0, 1.0, -50.0, 1.0 ]
}

[node name="EnemyDevourerWorm" type="KinematicBody2D" groups=[
"Devourer",
"spiky",
]]
collision_layer = 32
collision_mask = 9
script = ExtResource( 2 )

[node name="WormSkeleton" type="Node2D" parent="."]

[node name="torus1" type="RigidBody2D" parent="WormSkeleton"]
position = Vector2( 2.74121, -264.06 )
z_index = 1
collision_layer = 2147483648
collision_mask = 8
mass = 50.0
gravity_scale = -2.0
contacts_reported = 1
can_sleep = false
angular_damp = 7.0

[node name="torus" parent="WormSkeleton/torus1" groups=[
"Torus",
] instance=ExtResource( 3 )]

[node name="spine" type="Sprite" parent="WormSkeleton/torus1"]
position = Vector2( 0, 5 )
scale = Vector2( -0.5, 0.45 )
texture = ExtResource( 1 )
hframes = 4

[node name="bodyphysics" type="CollisionShape2D" parent="WormSkeleton/torus1"]
shape = SubResource( 1 )

[node name="bead2" type="PinJoint2D" parent="WormSkeleton/torus1" groups=[
"Beads",
]]
position = Vector2( -1.68176, -80.7269 )
node_a = NodePath("..")
node_b = NodePath("../../torus2")

[node name="bead2" type="Sprite" parent="WormSkeleton/torus1/bead2"]
position = Vector2( -0.18462, 0.091095 )
scale = Vector2( 0.3, 0.2 )
texture = ExtResource( 1 )
hframes = 4

[node name="torus2" type="RigidBody2D" parent="WormSkeleton"]
position = Vector2( -0.622315, -428.876 )
z_index = 1
collision_layer = 0
collision_mask = 8
mass = 50.0
gravity_scale = -2.0
contacts_reported = 1
can_sleep = false
angular_damp = 7.0

[node name="torus" parent="WormSkeleton/torus2" groups=[
"Torus",
] instance=ExtResource( 3 )]

[node name="spine" type="Sprite" parent="WormSkeleton/torus2"]
position = Vector2( 0.511, 5 )
scale = Vector2( 0.5, 0.45 )
texture = ExtResource( 1 )
hframes = 4

[node name="bodyphysics" type="CollisionShape2D" parent="WormSkeleton/torus2"]
shape = SubResource( 2 )

[node name="bead3" type="PinJoint2D" parent="WormSkeleton/torus2" groups=[
"Beads",
]]
position = Vector2( 1.68177, -85.772 )
node_a = NodePath("..")
node_b = NodePath("../../torus3")

[node name="bead2" type="Sprite" parent="WormSkeleton/torus2/bead3"]
position = Vector2( -0.18462, 0.091095 )
scale = Vector2( 0.3, 0.2 )
texture = ExtResource( 1 )
hframes = 4

[node name="torus3" type="RigidBody2D" parent="WormSkeleton"]
position = Vector2( 1.05957, -607.146 )
z_index = 1
collision_layer = 0
collision_mask = 8
mass = 50.0
gravity_scale = -2.0
contacts_reported = 1
can_sleep = false
angular_damp = 7.0

[node name="torus" parent="WormSkeleton/torus3" groups=[
"Torus",
] instance=ExtResource( 3 )]

[node name="spine" type="Sprite" parent="WormSkeleton/torus3"]
position = Vector2( 0.511, 5 )
scale = Vector2( -0.5, 0.45 )
texture = ExtResource( 1 )
hframes = 4

[node name="bodyphysics" type="CollisionShape2D" parent="WormSkeleton/torus3"]
shape = SubResource( 3 )

[node name="bead3" type="PinJoint2D" parent="WormSkeleton/torus3" groups=[
"Beads",
]]
position = Vector2( 1.68177, -85.772 )
node_a = NodePath("..")
node_b = NodePath("../../torus4")

[node name="bead2" type="Sprite" parent="WormSkeleton/torus3/bead3"]
position = Vector2( -0.18462, 0.091095 )
scale = Vector2( 0.3, 0.2 )
texture = ExtResource( 1 )
hframes = 4

[node name="torus4" type="RigidBody2D" parent="WormSkeleton"]
position = Vector2( 2.74133, -783.734 )
z_index = 1
collision_layer = 0
collision_mask = 8
mass = 50.0
gravity_scale = -2.0
contacts_reported = 1
can_sleep = false
angular_damp = 7.0

[node name="torus" parent="WormSkeleton/torus4" groups=[
"Torus",
] instance=ExtResource( 3 )]

[node name="spine" type="Sprite" parent="WormSkeleton/torus4"]
position = Vector2( 0.511, 5 )
scale = Vector2( 0.5, 0.45 )
texture = ExtResource( 1 )
hframes = 4

[node name="bodyphysics" type="CollisionShape2D" parent="WormSkeleton/torus4"]
shape = SubResource( 4 )

[node name="bead3" type="PinJoint2D" parent="WormSkeleton/torus4" groups=[
"Beads",
]]
position = Vector2( 1.68177, -85.772 )
node_a = NodePath("..")

[node name="bead2" type="Sprite" parent="WormSkeleton/torus4/bead3"]
position = Vector2( -0.18462, 0.091095 )
scale = Vector2( 0.3, 0.2 )
texture = ExtResource( 1 )
hframes = 4

[node name="chest" type="StaticBody2D" parent="WormSkeleton"]
position = Vector2( 0, -96.317 )
z_index = 1
collision_layer = 0
collision_mask = 8

[node name="torus" parent="WormSkeleton/chest" groups=[
"Torus",
] instance=ExtResource( 3 )]

[node name="spine" type="Sprite" parent="WormSkeleton/chest"]
position = Vector2( 0.511, 5 )
scale = Vector2( 0.5, 0.45 )
texture = ExtResource( 1 )
hframes = 4

[node name="bodyphysics" type="CollisionShape2D" parent="WormSkeleton/chest"]
shape = SubResource( 5 )

[node name="bead1" type="PinJoint2D" parent="WormSkeleton/chest" groups=[
"Beads",
]]
position = Vector2( 1.05945, -87.0175 )
node_a = NodePath("..")
node_b = NodePath("../../torus1")

[node name="bead1" type="Sprite" parent="WormSkeleton/chest/bead1"]
position = Vector2( -0.185, 8 )
scale = Vector2( 0.3, 0.2 )
texture = ExtResource( 1 )
hframes = 4

[node name="head" type="StaticBody2D" parent="WormSkeleton/chest" groups=[
"firewall",
]]
self_modulate = Color( 5, 5, 5, 1 )
position = Vector2( 0, 96.317 )
rotation = 0.0174533
z_index = 2
collision_layer = 32

[node name="head" type="Sprite" parent="WormSkeleton/chest/head"]
position = Vector2( -1.33484, -32.0361 )
scale = Vector2( 0.7, 0.7 )
z_index = 1
texture = ExtResource( 1 )
hframes = 4
frame = 1

[node name="spine2" type="Sprite" parent="WormSkeleton/chest/head"]
position = Vector2( 4.30569, -34.4722 )
rotation = -0.0174533
scale = Vector2( 0.5, 0.3 )
z_index = -2
texture = ExtResource( 1 )
hframes = 4

[node name="collisionhead" type="CollisionPolygon2D" parent="WormSkeleton/chest/head"]
polygon = PoolVector2Array( 6.35303, 76.8385, -71.1148, -40.8824, -8.13153, -162.631, 7.06974, -154.97, 69.3903, -40.9535 )
disabled = true

[node name="HeadAnim" type="AnimationPlayer" parent="WormSkeleton/chest/head"]

[node name="TorusAnim" type="AnimationPlayer" parent="WormSkeleton"]
autoplay = "normal"
anims/normal = SubResource( 6 )

[node name="WormAnim" type="AnimationPlayer" parent="."]
autoplay = "neutral"
anims/die = SubResource( 7 )
anims/neutral = SubResource( 8 )

[node name="collisionhead" type="CollisionPolygon2D" parent="."]
rotation = 0.0174533
polygon = PoolVector2Array( 5.62871, 80.8203, -71.9222, -41.6622, -8.13153, -162.631, 9.38122, -158.979, 68.5829, -41.7332 )
[connection signal="hide" from="WormSkeleton/torus1/torus" to="." method="_on_torus_hide"]
[connection signal="hide" from="WormSkeleton/torus2/torus" to="." method="_on_torus_hide"]
[connection signal="hide" from="WormSkeleton/torus3/torus" to="." method="_on_torus_hide"]
[connection signal="hide" from="WormSkeleton/torus4/torus" to="." method="_on_torus_hide"]
[connection signal="hide" from="WormSkeleton/chest/torus" to="." method="_on_torus_hide"]
